--- a/Normal_J6/src/main/resources/templates/NguoiDung/chitiet.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/chitiet.html
@@ -41,7 +41,7 @@
                             <!-- Thumbnail Image End -->
                             <div class="product-thumbnail mt-15">
                                 <div class="thumb-menu owl-carousel nav tabs-area" role="tablist">
-                                    <a class="active" data-toggle="tab" href="#thumb1"><img src="img/products/${product.image1 }" alt="product-thumbnail"></a>
+                                    <a class="active" data-toggle="tab" href="#thumb1"><img th:src="@{i/img/products/${product.image}}" alt="product-thumbnail"></a>
                                     <a data-toggle="tab" href="#thumb2"><img src="img/products/${product.image2 }" alt="product-thumbnail"></a>
 
                                 </div>
@@ -52,7 +52,7 @@
                         <!-- Thumbnail Description Start -->
                         <div class="col-lg-7">
                             <div class="thubnail-desc fix">
-                                <h3 class="product-header">${product.name }</h3>
+                                <h3 class="product-header">[[${product.name }]]</h3>
                      
                                 <div class="pro-price mtb-30">
                                     <p class="d-flex align-items-center"><span class="price">${product.price }₫</span></p>
