xong đăng ký r đó nhoe

--- a/Normal_J6/src/main/resources/templates/TaiKhoan/login.html
+++ b/Normal_J6/src/main/resources/templates/TaiKhoan/login.html
@@ -19,7 +19,7 @@
 <div class="header">
 		<div class="header-main">
 		       <h1>ĐĂNG NHẬP</h1>
-		       <center><h5 th:text="${tb}" style="color:red"></h5></center>
+		       <center><span th:text="${tb}" style="color:red"></span></center>
 			<div class="header-bottom">
 				<div class="header-right w3agile">
 					
