--- a/Normal_J6/src/main/resources/templates/TaiKhoan/SignUp.html
+++ b/Normal_J6/src/main/resources/templates/TaiKhoan/SignUp.html
@@ -19,18 +19,25 @@
 <div class="header">
 		<div class="header-main">
 		       <h1>ĐĂNG KÝ</h1>
-		       <h5 th:text="${tb}"></h5>
+		       <center><span style="color:red" th:text="${tb}"></span></center>
 			<div class="header-bottom">
 				<div class="header-right w3agile">
 					
 					<div class="header-left-bottom agileinfo">
 						
-					 <form action="/" method="post">
-						<input type="text"   name="username" placeholder="Nhập Username"/>
-					   <input type="password"name="password" placeholder="Nhập Password"/>
-						<input type="password"name="password" placeholder="Nhập lại Password"/>
-						<input type="text"name="fullname" placeholder="Nhập FullName"/>
-						<input type="text"name="fullname" placeholder="Nhập Email"/>
+					 <form action="/register" method="post" th:object="${acc}">
+					   <i style="color:red"th:errors="*{username}"></i>
+					   <i style="color:red"th:text="${ktTonTai}"></i>
+						<input th:field="*{username}" type="text"name="username" placeholder="Nhập Username"/>
+						<i style="color:red"th:errors="*{password}"></i>
+					   <input th:field="*{password}"type="password"name="password" placeholder="Nhập Password"/>
+					   <i style="color:red"th:text="${ktPass}"></i>
+						<input type="password"name="NLpassword" placeholder="Nhập lại Password"/>
+						<i style="color:red"th:errors="*{fullname}"></i>
+						<input th:field="*{fullname}"type="text"name="fullname" placeholder="Nhập FullName"/>
+						<i style="color:red"th:errors="*{email}"></i>
+						<i style="color:red"th:text="${ktEmail}"></i>
+						<input th:field="*{email}"type="text"name="email" placeholder="Nhập Email"/>
 						<div class="remember">
 			            
 						 
