--- a/Normal_J6/src/main/resources/static/adminAsset/components/categories.html
+++ b/Normal_J6/src/main/resources/static/adminAsset/components/categories.html
@@ -18,17 +18,18 @@
 				<div class="box box-primary">
 					<!-- /.box-header -->
 					<!-- form start -->
+					  <div uib-alert ng-repeat="alert in alertError" close="closeAlert()">{{alert.msg}}</div>
 					<form role="form">
 						<div class="box-body">
 							<div class="form-group">
 								<label for="exampleInputEmail1">Category Name</label> <input
 									type="text" class="form-control" id="exampleInputEmail1"
-									placeholder="Enter name of category">
+									placeholder="Enter name of category" ng-model="name">
 							</div>
 						</div>
 						<!-- /.box-body -->
 						<div class="box-footer">
-							<button type="submit" class="btn btn-primary">Submit</button>
+							<button type="submit" class="btn btn-primary" ng-click="categoryCreate()">Submit</button>
 						</div>
 					</form>
 				</div>
