--- a/Normal_J6/src/main/resources/templates/TaiKhoan/FogetPass.html
+++ b/Normal_J6/src/main/resources/templates/TaiKhoan/FogetPass.html
@@ -3,6 +3,7 @@
 <head>
 <title>Đăng nhập</title>
 <script src="/js/jquery.min.js"></script>
+
 <!-- Custom Theme files -->
 <link href="/css/styleLogin.css" rel="stylesheet" type="text/css" media="all"/>
 <!-- for-mobile-apps -->
@@ -18,35 +19,28 @@
 <!--header start here-->
 <div class="header">
 		<div class="header-main">
-		       <h1>ĐĂNG NHẬP</h1>
-		       <center><span th:text="${tb}" style="color:red"></span></center>
+		       <h2 style="color:white;text-align:center;font-size: 50px;padding-bottom: 0.8em">QUÊN MẬT KHẨU</h2>
+		       <center><span style="color:red" th:text="${tbForget}"></span></center>
 			<div class="header-bottom">
 				<div class="header-right w3agile">
 					
-					<div class="header-left-bottom agileinfo">
+			<div class="header-left-bottom agileinfo">
 						
-					 <form action="/security/login" method="post">
-						<input type="text"   name="username" placeholder="Tên đăng nhập"/>
-					<input type="password"   name="password" placeholder="Mật khẩu"/>
-						<div class="remember">
-			            
-						 <div class="forgot">
-						 	<h6><a href="#">Quên mật khẩu?</a></h6>
-						 </div>
-						<div class="clear" > </div>
-					  </div>
+	<form action="/fogetPass" method="post">
+					  
+		<input  type="text"name="username" th:value="${username}" placeholder="Nhập Username"/>
+						
 					   
-						<input type="submit" value="Đăng nhập">
-					</form>	
-					<div class="header-left-top">
-						<div class="sign-up"> <h2>or</h2> </div>
+						
+	<input type="text"name="email" th:value="${email}" placeholder="Nhập Email"/>
+							  
+						
+						
+					   
+	<input type="submit" value="Gửi">
+  </form>	
 					
-					</div>
-					<div class="header-social wthree">
-					        <a href="/oauth2/authorization/google" class="twitt"><h5>Google</h5></a>
-							<a href="/oauth2/authorization/facebook" class="face"><h5>Facebook</h5></a>
-							
-						</div>
+					
 						
 				</div>
 				</div>
