--- a/Normal_J6/src/main/resources/templates/layout/layout.html
+++ b/Normal_J6/src/main/resources/templates/layout/layout.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" th:href="@{/css/default.css}" >
     <link rel="stylesheet" th:href="@{/css/style.css}" > 
     <link rel="stylesheet" th:href="@{/css/responsive.css}" >
-
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    
     <script th:src="@{\js\vendor\modernizr-3.5.0.min.js}"></script>
     
 </head>
