--- a/Normal_J6/src/main/resources/templates/NguoiDung/trangchu.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/trangchu.html
@@ -9,7 +9,7 @@
 <meta charset="UTF-8">
 <title th:text="#{home.title}"></title>
 </head>
-<body>
+<body ng-app="shopping-cart-app" ng-controller="shopping-cart-ctrl">
  <div class="col-xl-9 col-lg-8 slider_box">
                         <div class="slider-wrapper theme-default">
                             <!-- Slider Background  Image Start-->
