--- a/Normal_J6/src/main/resources/templates/NguoiDung/404.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/404.html
@@ -31,7 +31,7 @@
                             </div>
                    
                             <div class="error-button">
-                                <a href="trangchu">Back to home page</a>
+                                <a th:href="@{/index}">Back to home page</a>
                             </div>
                         </div>
                     </div>
