--- a/Normal_J6/src/main/resources/static/adminAsset/components/categories.html
+++ b/Normal_J6/src/main/resources/static/adminAsset/components/categories.html
@@ -18,7 +18,7 @@
 				<div class="box box-primary">
 					<!-- /.box-header -->
 					<!-- form start -->
-					  <div uib-alert ng-repeat="alert in alertError" close="closeAlert()">{{alert.msg}}</div>
+					  <div uib-alert ng-repeat="alert in alertError" close="closeAlert($index)">{{alert.msg}}</div>
 					<form role="form">
 						<div class="box-body">
 							<div class="form-group">
@@ -29,7 +29,8 @@
 						</div>
 						<!-- /.box-body -->
 						<div class="box-footer">
-							<button type="submit" class="btn btn-primary" ng-click="categoryCreate()">Submit</button>
+							<button type="submit" class="btn btn-primary" ng-click="categoryCreate()">Create</button>
+							<button type="submit" class="btn btn-primary" ng-click="" ng-hide="show">Update</button>
 						</div>
 					</form>
 				</div>
@@ -72,7 +73,12 @@
 														<tr role="row" class="odd" ng-repeat="ctg in category | startForm:(currentPage-1) * pageSize| limitTo: pageSize">
 															<td class="sorting_1">{{ctg.id}}</td>
 															<td>{{ctg.name}}</td>
-															<td>todo action</td>
+															<td>
+															<a href="" ng-click="editCategory(ctg.id, ctg.name)">Edit</a>
+																|
+															<a href="" ng-click="deleteCategory(ctg.id)">Delete</a>
+															
+															</td>
 														</tr>
 													
 													</tbody>
