--- a/Normal_J6/src/main/resources/static/adminAsset/components/categories.html
+++ b/Normal_J6/src/main/resources/static/adminAsset/components/categories.html
@@ -29,8 +29,9 @@
 						</div>
 						<!-- /.box-body -->
 						<div class="box-footer">
-							<button type="submit" class="btn btn-primary" ng-click="categoryCreate()">Create</button>
-							<button type="submit" class="btn btn-primary" ng-click="" ng-hide="show">Update</button>
+							<button type="submit" class="btn btn-primary" ng-click="categoryCreate()" ng-hide="show">Create</button>
+							<button type="submit" class="btn btn-primary" ng-click="updateCategory()" ng-hide="!show">Update</button>
+							<button type="submit" class="btn btn-danger" ng-click="backToCreate()" ng-hide="!show">Back To Create</button>
 						</div>
 					</form>
 				</div>
