--- a/Normal_J6/src/main/resources/static/adminAsset/components/accounts.html
+++ b/Normal_J6/src/main/resources/static/adminAsset/components/accounts.html
@@ -1,4 +1,5 @@
-<div class="content-wrapper" style="min-height: 956.275px;">
+
+<div  class="content-wrapper" style="min-height: 956.275px;">
     <!-- Content Header (Page header) -->
      <div uib-alert ng-repeat="alert in alertError" close="closeAlert($index)">{{alert.msg}}</div>
     <section class="content-header">
@@ -43,7 +44,14 @@
                   <label for="exampleInputFullname">Email</label>
                   <input ng-model="email" type="email" class="form-control" id="exampleInputEmail" placeholder="Enter Email">
                 </div>
-                
+                <div class="form-group">
+                   
+                   <select>
+                      <div ng-repeat="x in roles">
+                        <option th:text="${a.name}">{{x}}</option>
+                        </div>
+                    </select>
+                </div>
                 
               </div>
               <!-- /.box-body -->
