--- a/Normal_J6/src/main/resources/static/adminAsset/components/products.html
+++ b/Normal_J6/src/main/resources/static/adminAsset/components/products.html
@@ -17,15 +17,48 @@
         <div class="col-md-12">
           <!-- general form elements -->
           <div class="box box-primary">
+          <div uib-alert ng-repeat="alert in alertError" close="closeAlert($index)">{{alert.msg}}</div>
             <div class="box-header with-border">
               <h3 class="box-title">Do Action</h3>
             </div>
             <!-- /.box-header -->
             <!-- form start -->
             <form role="form">
-       
+       			<div class="box-body">
+                <div class="form-group">
+                  <label for="exampleInputEmail1">Name Product</label>
+                  <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Name Product">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword1">Price</label>
+                  <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Price" min="1">
+                </div>
+                
+                <div class="form-group">
+                  <label>Select</label>
+                  <select class="form-control" ng-repeat= "ctg in category">
+                   <option>---Chọn category ----</option>
+                    <option>{{ctg.name}}</option>
+                  </select>
+                </div>
+                
+                <div class="form-group">
+                  <label for="exampleInputPassword1">Quantity</label>
+                  <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Quantity">
+                </div>
+                
+                <div class="form-group">
+                  <label>Description</label>
+                  <textarea class="form-control" rows="3" placeholder="Enter ..."></textarea>
+                </div>
+                
+                <div class="form-group">
+                  <label for="exampleInputFile">File input</label>
+                  <input type="file" id="exampleInputFile">
+                </div>
+              </div>
               <div class="box-footer">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Create</button>
               </div>
             </form>
           </div>
@@ -57,7 +90,7 @@
                   <td>{{prd.quantity}}</td>
                   <td>{{prd.description}}</td>
                   <td><a>Edit</a> | 
-                  	<a href="" ng-click="">Delete</a>
+                  	<a href="" ng-click="deleteProduct(prd.id)">Delete</a>
                   </td>
                 </tr>
                 </tbody>
