--- a/Normal_J6/src/main/resources/static/adminAsset/components/accounts.html
+++ b/Normal_J6/src/main/resources/static/adminAsset/components/accounts.html
@@ -102,7 +102,7 @@ aria-label="Browser: activate to sort column ascending">Username</th>
 	
 	<td>
     <a href="" ng-click="editAccount(ctg.id,ctg.username,ctg.password,ctg.fullname,
-          ctg.email,ctg.photo)">Edit</a>
+          ctg.email)">Edit</a>
 			|
 	<a href="" ng-click="deleteAccount(ctg.id)" >Delete</a>
 															
