--- a/Normal_J6/src/main/resources/templates/layout/layout.html
+++ b/Normal_J6/src/main/resources/templates/layout/layout.html
@@ -62,7 +62,7 @@
                                 
 
                                   <div th:if="${#request.remoteUser}">
-                                       <li><a href="../doimk" th:text="#{lo.mn.changepass}" ></a></li>
+                                       <li><a href="/changePass" th:text="#{lo.mn.changepass}" ></a></li>
                                         <li><a href="../capnhattk" th:text="#{lo.mn.updateacc}"  ></a></li>
                                            <li><a href="../lichsu/${sessionScope.user.username}"  th:text="#{lo.mn.history}"></a></li>
 
