--- a/Normal_J6/src/main/resources/templates/NguoiDung/giohang.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/giohang.html
@@ -30,9 +30,9 @@
                                 <table>
                                     <thead>
                                         <tr>
+                                        <th class="product-thumbnail">Id</th>
                                             <th class="product-thumbnail">Hình</th>
                                             <th class="product-name">Sản phẩm</th>
-                                              <th class="product-name">Kích thước</th>
                                             <th class="product-price">Giá</th>
                                             <th class="product-quantity">Số lượng</th>
                                             <th class="product-subtotal">Tổng</th>
@@ -41,23 +41,24 @@
                                     </thead>
                                     <tbody>
                                    
-                                    <c:forEach var="HoLy" items="${cartsession}">
-                                     <form action="/update" method="post">
-                                    <input type="hidden" name="id" value="${HoLy.id}">
+                                  
+                                  
+                                   
                               
-                                        <tr>
+                                        <tr  ng-repeat="item in cart.items">
+                                           <td><span class="amount"><a >{{item.id}}</a></span></td>
                                             <td class="product-thumbnail">
-                                                <a href="#"><img src="img/products/${HoLy.image}" alt="cart-image"></a>
+                                                <a href="#"><img th:src="@{|/img/products/{{item.image}}|}" alt="cart-image"></a>
                                             </td>
-                                            <td class="product-name"><a href="#">${HoLy.name}</a></td>
-                                            <td class="product-name"><a >${HoLy.size}</a></td>
-                                            <td class="product-price"><span class="amount">${HoLy.price}₫</span></td>
-                                            <td class="product-price"><input name="qty" value="${HoLy.qty}" ></td>
-                                            <td class="product-subtotal">${HoLy.price * HoLy.qty}₫</td>
-                                            <td class="product-remove"> <a href="../delete/${HoLy.id}"><i class="fa fa-times" aria-hidden="true"></i></a></td>
+                                          
+                                            <td><span class="amount"><a href="#">{{item.name}}</a></span></td>                                       
+                                            <td><span class="amount">{{item.unitPrice | number:0}}₫</span></td>
+                                            <td><input ng-change="cart.saveToLocalStorage()" ng-model="item.qty" type="number" min="1"></td>
+                                            <td><span class="amount">{{item.unitPrice * item.qty | number:0}}₫</span></td>
+                                            <td class="product-remove"> <a ng-click="cart.remove(item.id)"><i class="fa fa-times" aria-hidden="true"></i></a></td>
                                         </tr>
-                                        </form>
-                                        </c:forEach>
+                                   
+                                       
                                     
                                     </tbody>
                                 </table>
@@ -68,7 +69,7 @@
                                 <div class="col-md-8 col-sm-12">
                                     <div class="buttons-cart">
                                    
-                                        <a href="clear">Xóa tât cả sản phẩm</a>
+                                        <a href="#" ng-click="cart.clear()">Xóa tât cả sản phẩm</a>
                                         <a href="../trangchu">Tiếp tục mua sắm</a>
                                     </div>
                                 </div>
