--- a/Normal_J6/src/main/resources/templates/NguoiDung/shop.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/shop.html
@@ -84,7 +84,7 @@
                                                     </div>
                                                     <div class="pro-actions">
                                                         <div class="actions-primary">
-                                                            <a th:attr="ng-click=@{|cart.add(${HoLy.id)|}" title="Thêm vào giỏ hàng"> + Thêm vào giỏ hàng</a>
+                                                            <a href=""  th:attr="ng-click=@{|cart.add(${HoLy.id})|}" title="Thêm vào giỏ hàng"> + Thêm vào giỏ hàng</a>
                                                         </div>
 
                                                     </div>
