--- a/Normal_J6/src/main/resources/static/adminAsset/components/aside.html
+++ b/Normal_J6/src/main/resources/static/adminAsset/components/aside.html
@@ -16,6 +16,7 @@
       <ul class="sidebar-menu tree" data-widget="tree">
         <li class="header">MAIN NAVIGATION</li>
         <li><a href="/admin/accounts"><i class="fa fa-book"></i> <span>Accounts</span></a></li>
+         <li><a href="/admin/authorities"><i class="fa fa-book"></i> <span>authorities</span></a></li>
         <li><a href="/admin/products"><i class="fa fa-book"></i> <span>Product</span></a></li>
         <li><a href="/admin/categories"><i class="fa fa-book"></i> <span>Category</span></a></li>
       </ul>
