--- a/Normal_J6/src/main/resources/templates/NguoiDung/giohang.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/giohang.html
@@ -19,14 +19,9 @@
         </div>
         <!-- Breadcrumb End -->
         <!-- Cart Main Area Start -->
-        <div class="cart-main-area ptb-100 ptb-sm-60">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 col-sm-12">
-                        <!-- Form Start -->
-                        <form action="#">
+
                             <!-- Table Content Start -->
-                            <div class="table-content table-responsive mb-45">
+                            <div class="table-content table-responsive mb-45" >
                                 <table>
                                     <thead>
                                         <tr>
@@ -66,41 +61,25 @@
                             <!-- Table Content Start -->
                             <div class="row">
                                <!-- Cart Button Start -->
-                                <div class="col-md-8 col-sm-12">
+                                <div class="col-md-12 col-sm-12">
                                     <div class="buttons-cart">
                                    
                                         <a href="#" ng-click="cart.clear()">Xóa tât cả sản phẩm</a>
                                         <a href="../trangchu">Tiếp tục mua sắm</a>
+                                        <a style="float: right;" th:href="@{/order/dathang}">Kiểm tra đơn hàng</a>
                                     </div>
+                                </div>
+                               
                                 </div>
                                 <!-- Cart Button Start -->
                                 <!-- Cart Totals Start -->
-                                <div class="col-md-4 col-sm-12">
-                                    <div class="cart_totals float-md-right text-md-right">
-                                        <h2>Tổng giỏ hàng</h2>
-                                        <br>
-                                        <table class="float-md-right">
-                                            <tbody>
-                                          
-                                                <tr class="order-total">
-                                                    <th>Tổng tiền</th>
-                                                    <td>
-                                                        <strong><span class="amount">${tongtien}₫</span></strong>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                        <div class="wc-proceed-to-checkout">
-                                            <a href="../dathang">Kiểm tra đơn hàng</a>
-                                        </div>
-                                    </div>
-                                </div>
+                     
                                 <!-- Cart Totals End -->
                             </div>
                             <!-- Row End -->
                         </form>
                         <!-- Form End -->
-                    </div>
+                  
                 </div>
                  <!-- Row End -->
             </div>
