--- a/Normal_J6/src/main/resources/static/adminAsset/components/products.html
+++ b/Normal_J6/src/main/resources/static/adminAsset/components/products.html
@@ -15,6 +15,7 @@
       <div class="row">
         <!-- left column -->
         <div class="col-md-12">
+         <div uib-alert ng-repeat="alert in alertError" close="closeAlert($index)">{{alert.msg}}</div>
           <!-- general form elements -->
           <div class="box box-primary">
             <div class="box-header with-border">
@@ -22,8 +23,8 @@
             </div>
             <!-- /.box-header -->
             <!-- form start -->
-<<<<<<< HEAD
-            <form role="form"  method="POST">
+
+            <form role="form"  method="POST" enctype="multipart/form-data">
        			<div class="box-body">
                 <div class="form-group">
                   <label for="exampleInputEmail1">Name Product</label>
@@ -54,19 +55,13 @@
                 
                 <div class="form-group">
                   <label for="exampleInputFile">File input</label>
-                  <input type="file" id="exampleInputFile" file-model="myFile">
+                  <input type="file" id="exampleInputFile" file-model = "myFile">
                 </div>
               </div>
-=======
-            <form role="form">
-       
->>>>>>> refs/remotes/origin/master
+
               <div class="box-footer">
-<<<<<<< HEAD
                 <button type="submit" class="btn btn-primary" ng-click="createProduct()">Create</button>
-=======
-                <button type="submit" class="btn btn-primary">Submit</button>
->>>>>>> refs/remotes/origin/master
+             
               </div>
             </form>
           </div>
@@ -98,7 +93,7 @@
                   <td>{{prd.quantity}}</td>
                   <td>{{prd.description}}</td>
                   <td><a>Edit</a> | 
-                  	<a href="" ng-click="">Delete</a>
+                  	<a href="" ng-click="deleteProduct(prd.id)">Delete</a>
                   </td>
                 </tr>
                 </tbody>
