--- a/Normal_J6/src/main/resources/templates/NguoiDung/dathang.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/dathang.html
@@ -60,11 +60,12 @@
                                 <div class ="row">
                                 <div class="form-group col-sm 6">
                                 <div>Người mua:</div>
-                                <div class ="form-control" id="username">[[${#request.remoteUser}]]</div>
+                                <div class ="form-control" id="id">1</div>
+                               
                                 </div>
                                    <div class="form-group col-sm 6">
                                 <div>Ngày đặt hàng:</div>
-                                <div class ="form-control">{{orders.oderDate | date:'dd-MM-yyyy'}}</div>
+                                <div class ="form-control">{{order.oderDate | date:'dd-MM-yyyy'}}</div>
                                 </div>
                                 </div>
                                 <div class="row">
