--- a/Normal_J6/src/main/resources/static/adminAsset/components/aside.html
+++ b/Normal_J6/src/main/resources/static/adminAsset/components/aside.html
@@ -1,14 +1,16 @@
-  
+  <!DOCTYPE html>
+<html xmlns= "http://www.thymeleaf.org">
 <aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar" style="height: auto;">
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="../adminAsset/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img th:href="@{/img/1.png}" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Alexander Pierce</p>
+          [[${#request.remoteUser}]]
+          <p>${id.username}</p>
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
       </div>
@@ -22,3 +24,4 @@
     </section>
     <!-- /.sidebar -->
   </aside>
+  </html>
