--- a/Normal_J6/src/main/resources/templates/NguoiDung/dathang.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/dathang.html
@@ -60,8 +60,8 @@
                                 <div class ="row">
                                 <div class="form-group col-sm 6">
                                 <div>Người mua:</div>
-                                <div class ="form-control" id="id">1</div>
-                               
+                                <div class ="form-control" id="username"> [[${#request.remoteUser}]]</div>
+                                <div hidden id="id"> [[${id.id}]]</div>
                                 </div>
                                    <div class="form-group col-sm 6">
                                 <div>Ngày đặt hàng:</div>
