--- a/Normal_J6/src/main/resources/templates/admin/dashboard.html
+++ b/Normal_J6/src/main/resources/templates/admin/dashboard.html
@@ -1,10 +1,10 @@
 
 <!DOCTYPE html>
-<html xmlns= "http://www.thymeleaf.org">
+<html xmlns = "http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AdminLTE 2 | Dashboard</title>
+  <title>Admin</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -42,9 +42,113 @@
 </head>
 <body class="hold-transition skin-blue sidebar-mini" ng-app="myApp">
 <div class="wrapper" style="height: auto; min-height: 100%;">
-<header ng-include="navbar" ng-controller="header-footer" >
-</header>
-<aside ng-include="aside"  ng-controller="header-footer"></aside>
+<!-- <header ng-include="navbar" ng-controller="header-footer" >
+</header> -->
+
+
+<header class="main-header" ng-controller="header-footer">
+    <!-- Logo -->
+    <a href="index2.html" class="logo">
+      <!-- mini logo for sidebar mini 50x50 pixels -->
+      <span class="logo-mini"><b>A</b>LT</span>
+      <!-- logo for regular state and mobile devices -->
+      <span class="logo-lg"><b>ADMIN</b></span>
+    </a>
+    <!-- Header Navbar: style can be found in header.less -->
+    <nav class="navbar navbar-static-top">
+      <!-- Sidebar toggle button-->
+      <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
+        <span class="sr-only">Toggle navigation</span>
+      </a>
+
+      <div class="navbar-custom-menu">
+        <ul class="nav navbar-nav">
+         
+          <!-- User Account: style can be found in dropdown.less -->
+          <li class="dropdown user user-menu">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <img th:src="@{/img/1.png}" class="user-image" alt="User Image">
+              <span class="hidden-xs">[[${#request.remoteUser}]]</span>
+            </a>
+            <ul class="dropdown-menu">
+              <!-- User image -->
+              <li class="user-header">
+                <img src="../adminAsset/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+
+                <p>
+                  Alexander Pierce - Web Developer
+                  <small>Member since Nov. 2012</small>
+                </p>
+              </li>
+              <!-- Menu Body -->
+              <li class="user-body">
+                <div class="row">
+                  <div class="col-xs-4 text-center">
+                    <a href="#">Followers</a>
+                  </div>
+                  <div class="col-xs-4 text-center">
+                    <a href="#">Sales</a>
+                  </div>
+                  <div class="col-xs-4 text-center">
+                    <a href="#">Friends</a>
+                  </div>
+                </div>
+                <!-- /.row -->
+              </li>
+              <!-- Menu Footer-->
+              <li class="user-footer">
+                <div class="pull-left">
+                  <a href="#" class="btn btn-default btn-flat">Profile</a>
+                </div>
+                <div class="pull-right">
+                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                </div>
+              </li>
+            </ul>
+          </li>
+          <!-- Control Sidebar Toggle Button -->
+          <li>
+            <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+
+
+
+
+
+
+
+
+<aside class="main-sidebar" ng-controller="header-footer">
+    <!-- sidebar: style can be found in sidebar.less -->
+    <section class="sidebar" style="height: auto;">
+      <!-- Sidebar user panel -->
+      <div class="user-panel">
+        <div class="pull-left image">
+          <img th:src="@{/img/1.png}" class="img-circle" alt="User Image">
+        </div>
+        <div class="pull-left info">
+        <p> [[${#request.remoteUser}]]</p>
+ 
+          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+        </div>
+      </div>
+      <!-- sidebar menu: : style can be found in sidebar.less -->
+      <ul class="sidebar-menu tree" data-widget="tree">
+        <li class="header">MAIN NAVIGATION</li>
+        <li><a href="/admin/accounts"><i class="fa fa-book"></i> <span>Accounts</span></a></li>
+        <li><a href="/admin/products"><i class="fa fa-book"></i> <span>Product</span></a></li>
+        <li><a href="/admin/categories"><i class="fa fa-book"></i> <span>Category</span></a></li>
+      </ul>
+    </section>
+    <!-- /.sidebar -->
+  </aside>
+
+<!-- <aside ng-include="aside"  ng-controller="header-footer"></aside> -->
 
  <main ui-view></main>
 <footer ng-include="footer"  ng-controller="header-footer" ></footer>
